# tech-challenge-churn

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: model_card.md  monitoring.md
notebooks/: EDA.ipynb
src/api/: main.py
src/data/: load_data.py
src/features/: preprocessing.py
src/models/: baseline_model.py  predict_model.py  train_model.py
tests/: test_api.py  test_schema.py
